ServidorSeguridadInesMR/src/main/java/com/example/servidorseguridadinesmr/domain/model/error/exceptions/EmailException.java
package com.example.servidorseguridadinesmr.domain.model.error.exceptions;

public class EmailException extends RuntimeException{
    public EmailException(String message){super(message);}
}
